<resources>
    <string name="app_name">LoginPage</string>
    <string name="the_logo_of_the_loginpage_application">The logo of the LoginPage application</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
</resources>